[gd_scene load_steps=35 format=3 uid="uid://dumex72ems5r"]

[ext_resource type="Theme" uid="uid://dil4mrtu23acn" path="res://Resources/Themes/Info.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://cym2rn34oj5s3" path="res://Textures/UI/Information/box.png" id="2"]
[ext_resource type="PackedScene" uid="uid://lpbermjlr4kj" path="res://Scenes and Scripts/UI/Buttons/ButtonBase.tscn" id="3"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/GenerationUI.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://btolegbl3qaau" path="res://Scenes and Scripts/UI/Equations/EquationPanel.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://c2ikppvu16saf" path="res://Scenes and Scripts/UI/Buttons/BaseButton.tscn" id="6_iwjv6"]
[ext_resource type="PackedScene" uid="uid://dq8wkl0j51p8p" path="res://Scenes and Scripts/UI/RangeSlider.tscn" id="7"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="7_cy0t3"]

[sub_resource type="StyleBoxTexture" id="13"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
texture = ExtResource("2")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_smis2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02w64"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eje10"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0b3j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_whxxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aq47x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8oss"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k7j0d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6eajr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x6wau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v1edf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6gi7k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2erif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l018i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_selx5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fq3mj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b4ilm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7ffu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aqg5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1k3tk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1wsc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_loo4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld76w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tywsq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nv4wq"]
resource_local_to_scene = true
shader = ExtResource("7_cy0t3")

[node name="GenerationUI" type="Control" groups=["buttons", "no_place"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -306.0
offset_right = -256.0
offset_bottom = -306.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1")
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -140.0
offset_right = 40.0
offset_bottom = 6.0
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1")
theme_override_styles/panel = SubResource("13")

[node name="MouseTrap" type="Panel" parent="VBoxContainer/PanelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 1

[node name="Popupcontainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="VBoxContainer/PanelContainer/Popupcontainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 2

[node name="Save" parent="VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3")]
layout_mode = 2
tooltip_text = "Store the drawn initial and final states for generation."
Text = "Save States"

[node name="Saved State" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1")
text = "Saved State:"

[node name="EquationHolder" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="DegreeSlider" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/DegreeSlider"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/DegreeSlider/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1")
text = "Degree range"

[node name="RangeSlider" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/DegreeSlider/VBoxContainer" instance=ExtResource("7")]
layout_mode = 2
tickCount = 7

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -3
columns = 2

[node name="em" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_smis2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_02w64")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_eje10")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k0b3j")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_whxxr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_aq47x")
action_mode = 0
text = "EM"

[node name="strong" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_h8oss")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k7j0d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6eajr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_x6wau")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_v1edf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6gi7k")
action_mode = 0
text = "Strong"

[node name="weak" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2erif")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l018i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_selx5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fq3mj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_b4ilm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p7ffu")
action_mode = 0
text = "Weak"

[node name="electroweak" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aqg5l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1k3tk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_k1wsc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_loo4y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ld76w")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tywsq")
action_mode = 0
text = "E. Weak"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_iwjv6")]
material = SubResource("ShaderMaterial_nv4wq")
layout_mode = 2

[node name="Generate" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
Text = "Generate"
active = true

[node name="Equation" parent="." instance=ExtResource("5")]
layout_mode = 0
offset_left = 4.0
offset_top = 28.0
offset_right = 244.0
offset_bottom = 52.0
scale = Vector2(0.3, 0.3)
mouse_filter = 1

[node name="InitialScrollContainer" parent="Equation/VBoxContainer/EquationContainer" index="0"]
custom_minimum_size = Vector2(100, 0)

[node name="FinalScrollContainer" parent="Equation/VBoxContainer/EquationContainer" index="2"]
custom_minimum_size = Vector2(100, 0)

[connection signal="mouse_entered" from="VBoxContainer/PanelContainer" to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PanelContainer" to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer/MouseTrap" to="." method="_on_MouseTrap_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PanelContainer/MouseTrap" to="." method="_on_MouseTrap_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/em" to="." method="_on_electroweaktype_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/strong" to="." method="_on_strong_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/weak" to="." method="_on_electroweaktype_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electroweak" to="." method="_on_electroweak_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate" to="." method="_on_Generate_pressed"]

[editable path="Equation"]
[editable path="Equation/VBoxContainer/EquationContainer/InitialScrollContainer"]
[editable path="Equation/VBoxContainer/EquationContainer/FinalScrollContainer"]
